# academia-to-industry

./: .gitignore  DESCRIPTION  README.md  index.html  index.qmd  justfile  llms-full.txt  llms.txt  meta-tags.html  pyproject.toml  renderer.R  robots.txt  sitemap.xml  style.css
.claude/: settings.local.json
.github/workflows/: build-presentation.yaml
.well-known/: llms-full.txt  llms.txt
